# bima

./: AUTHORS  Makefile.am  README.md  configure.in
plugin/: Makefile.am
plugin/cgtk/: Makefile.am  bima-cgtk-class.h  bima-cgtk-frm-input.c  bima-cgtk-frm-input.h  bima-cgtk-utils.c  bima-cgtk-utils.h  bima-cgtk.c  bima-cgtk.h
plugin/phpweb/: Makefile.am  bima-phpweb.c  bima-phpweb.h
src/: Makefile.am  appdata.gob  appgui.gob  attribute.gob  bima-app-data.c  bima-app-data.h  bima-app-gui.c  bima-app-gui.h  bima-attribute.c  bima-attribute.h  bima-connection.c  bima-connection.h  bima-entity.c  bima-entity.h  bima-foreign-key.c  bima-foreign-key.h  bima-form.c  bima-form.h  bima-module.c  bima-module.h  bima-participation.c  bima-participation.h  bima-plugin.c  bima-plugin.h  bima-property.c  bima-property.h  bima-query-field.c  bima-query-field.h  bima-query-table.c  bima-query-table.h  bima-query.c  bima-query.h  bima-relation.c  bima-relation.h  bima-report.c  bima-report.h  bima-template-form.c  bima-template-form.h  bima-template.c  bima-template.h  (+47 more)
template/: Makefile.am  gtkc.bmt  php.bmt
template/cgtk/: Makefile.am  template_class.c  template_class.h  template_entity.c  template_form1.c  template_form2.c  template_form_input.c  template_form_input.h  template_form_tab.c  template_interface.c  template_interface.h  template_main.c  template_makefile  template_report1.c
template/php/: template_include.php  template_index.php  template_input.php  template_list.php  template_rpt_list.php
